# blutography

./: .gitignore  .output.txt  CMakeLists.txt  config.json  config.yaml  cookies.txt  gallery_data.json  shutdown_options.yaml
include/controllers/: admin.hpp  gallery.hpp  home.hpp
include/filters/: adminfilter.hpp
include/support/: b2service.hpp  controllers.hpp  gallery_storage.hpp  image_utils.hpp
public/assets/: aurora.avif  barcelona_church.avif  barcelona_hills.avif  barcelona_mountains.avif  barcelona_sunset.avif  manifest.json  stockholm_night.avif
public/scripts/: slideshow.js
public/styles/: home.css
public/templates/: gallery.html  home.html  login.html  upload.html
src/: main.cpp
src/controllers/: admin.cpp  gallery.cpp  home.cc
src/filters/: adminfilter.cpp
src/support/: b2service.cpp  gallery_storage.cpp  image_utils.cpp
test/: CMakeLists.txt  test_main.cc
